--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -298,8 +298,8 @@ Appl A $\rightarrow$ 104000 byte $\rightarrow$ Appl B
     % Draw the plot and points
     \addplot[thick, mark=*] coordinates {(0,1) (0.5,2) (1,4) (1.5,8) (2, 16) (2.5, 20) (3, 20) (3.5, 20) (4.5, 20) (4.5, 1)
     (5, 2) (5.5, 4) (6, 8) (6.5, 10) (13.5, 10) (13.5, 1) (14, 2)};
-    \fill[orange!40] (3.5, 0) rectangle (4, 23);
-    \fill[orange!40] (6.5, 0) rectangle (10.5, 23);
+    \fill[orange!40, opacity=0.5] (3.5, 0) rectangle (4, 23);
+    \fill[orange!40, opacity=0.5] (6.5, 0) rectangle (10.5, 23);
     
     \end{axis}
   \end{tikzpicture}
