--- a/Second Year/Algoritmi/Algoritmi.tex
+++ b/Second Year/Algoritmi/Algoritmi.tex
@@ -1,91 +1,6 @@
 \documentclass[a4paper]{article}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{cancel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{ebproof}
-\usepackage{pgfplots}
-\usepackage{tikz-cd}
-\usepackage{forest}
-\usetikzlibrary{decorations.pathreplacing} % for angle arc
-\usetikzlibrary{angles, quotes, calc} % for drawing angles
-\usepackage{color}   %May be necessary if you want to color links
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true, %set true if you want colored links
-    linktoc=all,     %set to all if you want both sections and subsections linked
-    linkcolor=black,  %choose some color if you want links to stand out
-}
-
-
-\usepackage{mathtools}
-\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
-\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
-
-\usepackage{xcolor}
-\usepackage[most]{tcolorbox}
-% Define a custom tcolorbox environment for examples
-\newtcolorbox{examplebox}[2][]{
-  colback=blue!5!white,
-  colframe=blue!30!black,
-  title=#2,
-  boxrule=0mm,
-  fonttitle=\bfseries,
-  width=\textwidth,
-  breakable,
-  #1
-}
-
-\newtcolorbox{definition} {
-  colback=green!5!white,   % Background color
-  colframe=green!75!black, % Border color
-  title=Definizione,          % Title of the box
-  boxrule=0.5mm,          % Thickness of the border                % Rounded corners
-  fonttitle=\bfseries,    % Title font style
-  width=\textwidth,       % Width of the box (adjustable)
-}
-
-
-
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
-
-\lstdefinestyle{mystyle}{
-    backgroundcolor=\color{backcolour},
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\ttfamily\footnotesize,
-    breakatwhitespace=false,
-    breaklines=true,
-    captionpos=b,
-    keepspaces=true,
-    numbers=left,
-    numbersep=5pt,
-    showspaces=false,
-    showstringspaces=false,
-    showtabs=false,
-    tabsize=2
-}
-
-\lstset{style=mystyle}
-
-\makeatletter
-\renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
-  \hskip -\arraycolsep
-  \let\@ifnextchar\new@ifnextchar
-  \array{#1}}
-\makeatother
-\usepackage{tikz}
-\usepackage{booktabs}
+\usepackage{import}
+\input{../../setup.sty}
 \title{Algoritmi}
 \author{Università di Verona\\Imbriani Paolo -VR500437\\Professor Roberto Segala}
 
@@ -1287,7 +1202,6 @@ for tree={
   ]
 ]
 \end{forest}
-\label{fig:albero_binario}
 \caption{Esempio di albero binario di ricerca}
 \end{figure}
 
