--- a/Second Year/Algoritmi/EserciziAlgoritmi.tex
+++ b/Second Year/Algoritmi/EserciziAlgoritmi.tex
@@ -1,81 +1,6 @@
 \documentclass[12pt]{article}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{cancel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{pgfplots}
-\usepackage{tikz}
-\usepackage{booktabs}
-\usepackage{tikz-cd}
-\usetikzlibrary{decorations.pathreplacing} 
-\usetikzlibrary{angles, quotes, calc} 
-
-\usepackage{color}   %May be necessary if yosu want to color links
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true, %set true if you want colored links
-    linktoc=all,     %set to all if you want both sections and subsections linked
-    linkcolor=black,  %choose some color if you want links to stand out
-}
-
-\usepackage{xcolor}
-\usepackage{tcolorbox}
-% Define a custom tcolorbox environment for examples
-\newtcolorbox{examplebox}[2][]{
-  colback=blue!5!white,   % Background color
-  colframe=blue!30!black, % Border color
-  title=#2,          % Title of the box
-  boxrule=0mm,          % Thickness of the border                % Rounded corners
-  fonttitle=\bfseries,    % Title font style
-  width=\textwidth,  
-  #1 % Width of the box (adjustable)
-}
-\newtcolorbox{definition} {
-  colback=green!5!white,   % Background color
-  colframe=green!75!black, % Border color
-  title=Definizione,          % Title of the box
-  boxrule=0.5mm,          % Thickness of the border                % Rounded corners
-  fonttitle=\bfseries,    % Title font style
-  width=\textwidth,       % Width of the box (adjustable)
-}
-
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
-
-\lstdefinestyle{mystyle}{
-    backgroundcolor=\color{backcolour},   
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\ttfamily\footnotesize,
-    breakatwhitespace=false,         
-    breaklines=true,                 
-    captionpos=b,                    
-    keepspaces=true,                 
-    numbers=left,                    
-    numbersep=5pt,                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=2
-}
-
-\lstset{style=mystyle}
-
-\makeatletter
-\renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
-  \hskip -\arraycolsep
-  \let\@ifnextchar\new@ifnextchar
-  \array{#1}}
-\makeatother
+\usepackage{import}
+\input{../../setup.sty}
 \title{Esercizi di Algoritmi}
 \author{Università di Verona\\Imbriani Paolo -VR500437\\Professor Roberto Segala}
 
