--- a/Second Year/Reti di Calcolatori/EserciziReti.tex
+++ b/Second Year/Reti di Calcolatori/EserciziReti.tex
@@ -1,80 +1,6 @@
 \documentclass[a4paper]{article}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{cancel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{tikz}
-\usepackage{booktabs}
-\usepackage{tikz-cd}
-\usetikzlibrary{decorations.pathreplacing} 
-\usetikzlibrary{angles, quotes, calc} 
-
-\usepackage{color}   %May be necessary if yosu want to color links
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true, %set true if you want colored links
-    linktoc=all,     %set to all if you want both sections and subsections linked
-    linkcolor=black,  %choose some color if you want links to stand out
-}
-
-\usepackage{xcolor}
-\usepackage{tcolorbox}
-% Define a custom tcolorbox environment for examples
-\newtcolorbox{examplebox}[2][]{
-  colback=blue!5!white,   % Background color
-  colframe=blue!30!black, % Border color
-  title=#2,          % Title of the box
-  boxrule=0mm,          % Thickness of the border                % Rounded corners
-  fonttitle=\bfseries,    % Title font style
-  width=\textwidth,  
-  #1 % Width of the box (adjustable)
-}
-\newtcolorbox{definition} {
-  colback=green!5!white,   % Background color
-  colframe=green!75!black, % Border color
-  title=Definizione,          % Title of the box
-  boxrule=0.5mm,          % Thickness of the border                % Rounded corners
-  fonttitle=\bfseries,    % Title font style
-  width=\textwidth,       % Width of the box (adjustable)
-}
-
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
-
-\lstdefinestyle{mystyle}{
-    backgroundcolor=\color{backcolour},   
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\ttfamily\footnotesize,
-    breakatwhitespace=false,         
-    breaklines=true,                 
-    captionpos=b,                    
-    keepspaces=true,                 
-    numbers=left,                    
-    numbersep=5pt,                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=2
-}
-
-\lstset{style=mystyle}
-
-\makeatletter
-\renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
-  \hskip -\arraycolsep
-  \let\@ifnextchar\new@ifnextchar
-  \array{#1}}
-\makeatother
+\usepackage{import}
+\input{../../setup.sty}
 \title{Esercizi di Reti}
 \author{Università di Verona\\Imbriani Paolo -VR500437\\Professor Damiano Carra}
 
@@ -324,7 +250,57 @@ Un'applicazione A deve trasferire 104400 byte verso un'applicazione B. Si suppon
     \[D_1 = [11.5 \rightarrow 12.5]\]
 \end{itemize}
 
+\begin{itemize}
+    \item \# segmenti = $\frac{104400}{1200} = 87$
+    \item RCVWND = $\frac{9600}{1200} = 8$ segmenti = 8  = STT
+    \item RCVWND $>$ 4 = $\frac{14400}{1200} = 12$ 
+    \item RCVWND $>$ 9 = $\frac{7200}{1200} = 6$
+\end{itemize}
 
 
+\begin{figure}[H]
+    \centering
+\begin{tikzpicture}
+    \begin{axis}[
+        axis lines=middle,
+        xlabel={$t$},
+        ylabel={$w$},
+        xtick={0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15, 16, 17, 18},
+        ytick={1,2,4,8,16,20},
+        ymin=0, ymax=23,
+        xmin=0, xmax=18,
+        axis line style={->},
+        every axis x label/.style={
+            at={(ticklabel* cs:1.05)},
+            anchor=west,
+        },
+        every axis y label/.style={
+            at={(ticklabel* cs:1.05)},
+            anchor=south,
+        }
+    ]
+    
+    % Draw the STT Threshold
+    \addplot[domain=0:12, samples=100, color=blue, thick]{8};
+    \addplot[color=blue, thick] coordinates {(12, 8) (12, 3)};
+    \addplot[domain=12:20, thick, samples=100, color=blue]{3};
+    \addplot[domain=0:4, samples=100, color=red, thick]{8};
+    \addplot[color=red, thick] coordinates {(4, 8) (4, 12)};
+    \addplot[domain=4:9, samples=100, color=red, thick]{12};
+    \addplot[color=red, thick] coordinates {(9, 12) (9, 6)};
+    \addplot[domain=9:20, samples=100, color=red, thick]{6};
+
+    % Draw the plot and points
+    \addplot[thick, mark=*] coordinates {(0,1) (1,2) (2,4) (3, 8) (4, 8) (5, 9) 
+    (6, 10) (7, 11) (8, 12) (9, 6) (10, 6) (11, 6) (13, 1) (14, 2) (15, 3) (16, 4)};
+    \fill[orange!40, opacity=0.5] (11.5, 0) rectangle (12.5, 23);
+    
+    \end{axis}
+  \end{tikzpicture}
+\end{figure}
+
+\[SEG = 1 + 2 + 4 + 8 + 8 + 9 + 10 + 11 + 12 + 6 + 6 + 6 + \cancel{6} + 1 + 2 + \overbrace{\cancel{3}}^{1} = 87\]
+\[CWND{finale} = CWND{old} = \frac{\# ACK}{CWND_{old}} = 3 + \frac{1}{3}\]
+finisce in $t = 16$
 
 \end{document}
