--- a/Second Year/Sistemi/Sistemi.tex
+++ b/Second Year/Sistemi/Sistemi.tex
@@ -1,143 +1,6 @@
 \documentclass[a4paper]{article}
-\usepackage{graphicx}
-\usepackage{float}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.18}
-\usepackage{listings}
-\usepackage{enumitem}
-\usepackage{cancel}
-\usepackage{amsmath}
-\usepackage{amsthm}
-\usepackage{amssymb}
-\usepackage{pgfplots}
-\usepackage{lipsum}
-\usepackage{mdframed} 
-\newmdtheoremenv{theo}{Theorem}
-
-
-% Define theorem styles
-\newtheorem{theorem}{Theorem}[section]    % Theorems numbered within sections
-\newtheorem{lemma}[theorem]{Lemma}        % Lemmas use the same counter as theorems
-\newtheorem{corollary}[theorem]{Corollary} % Corollaries use the same counter as theorems
-\newtheorem{proposition}[theorem]{Proposition} % Proposition uses the same counter
-\newtheorem{property}[theorem]{Propriety}
-\theoremstyle{definition}
-\newtheorem{definition}[theorem]{Definition}
-
-% Remark-style theorem
-\theoremstyle{remark}
-\newtheorem{remark}[theorem]{Remark}
-
-% Boxed environment for theorems
-\newmdenv[
-  linewidth=0.8pt,
-  roundcorner=5pt,
-  linecolor=black,
-  backgroundcolor=white!5,
-  skipabove=\baselineskip,
-  skipbelow=\baselineskip,
-  innerleftmargin=10pt,
-  innerrightmargin=10pt,
-  innertopmargin=5pt,
-  innerbottommargin=5pt
-]{thmbox}
-
-% Custom proof environment (also boxed)
-\renewenvironment{proof}[1][Proof]{%
-  \begin{mdframed}[linewidth=0.8pt, roundcorner=5pt, linecolor=black, skipabove=\baselineskip, skipbelow=\baselineskip, innertopmargin=5pt, innerbottommargin=5pt]%
-  \noindent\textbf{#1. }%
-}{%
-  \end{mdframed}%
-}
-
-% Redefine theorem environments to use thmbox
-\let\oldtheorem\theorem
-\renewenvironment{theorem}{\begin{thmbox}\begin{oldtheorem}}{\end{oldtheorem}\end{thmbox}}
-
-\let\oldlemma\lemma
-\renewenvironment{lemma}{\begin{thmbox}\begin{oldlemma}}{\end{oldlemma}\end{thmbox}}
-
-\let\oldcorollary\corollary
-\renewenvironment{corollary}{\begin{thmbox}\begin{oldcorollary}}{\end{oldcorollary}\end{thmbox}}
-
-\let\oldproposition\proposition
-\renewenvironment{proposition}{\begin{thmbox}\begin{oldproposition}}{\end{oldproposition}\end{thmbox}}
-
-\let\oldproperty\property
-  \renewenvironment{property}{\begin{oldproperty}}{\end{oldproperty}}
-
-
-% Reference shortcuts
-\newcommand{\thmref}[1]{Theorem~\ref{#1}}
-\newcommand{\lemref}[1]{Lemma~\ref{#1}}
-\newcommand{\corref}[1]{Corollary~\ref{#1}}
-\newcommand{\propref}[1]{Property~\ref{#1}} 
-
-% To customize QED symbol
-\renewcommand{\qedsymbol}{$\blacksquare$}
-
-
-\usepackage{tikz-cd}
-
-\usetikzlibrary{decorations.pathreplacing} % for angle arc
-\usetikzlibrary{angles, quotes, calc} % for drawing angles
-
-\usepackage{color}   %May be necessary if you want to color links
-\usepackage{hyperref}
-\hypersetup{
-    colorlinks=true, %set true if you want colored links
-    linktoc=all,     %set to all if you want both sections and subsections linked
-    linkcolor=black,  %choose some color if you want links to stand out
-}
-
-\usepackage{xcolor}
-\usepackage[most]{tcolorbox}
-% Define a custom tcolorbox environment for examples
-\newtcolorbox{examplebox}[2][]{
-  colback=blue!5!white,
-  colframe=blue!30!black,
-  title=#2,
-  boxrule=0mm,
-  fonttitle=\bfseries,
-  width=\textwidth,
-  breakable,
-  #1
-}
-
-\definecolor{codegreen}{rgb}{0,0.6,0}
-\definecolor{codegray}{rgb}{0.5,0.5,0.5}
-\definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
-
-\lstdefinestyle{mystyle}{
-    backgroundcolor=\color{backcolour},   
-    commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
-    numberstyle=\tiny\color{codegray},
-    stringstyle=\color{codepurple},
-    basicstyle=\ttfamily\footnotesize,
-    breakatwhitespace=false,         
-    breaklines=true,                 
-    captionpos=b,                    
-    keepspaces=true,                 
-    numbers=left,                    
-    numbersep=5pt,                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=2
-}
-
-\lstset{style=mystyle}
-
-\makeatletter
-\renewcommand*\env@matrix[1][*\c@MaxMatrixCols c]{%
-  \hskip -\arraycolsep
-  \let\@ifnextchar\new@ifnextchar
-  \array{#1}}
-\makeatother
-\usepackage{tikz}
-\usepackage{booktabs}
+\usepackage{import}
+\input{../../setup.sty}
 \title{Sistemi}
 \author{Università di Verona\\Imbriani Paolo -VR500437\\Professor Francesco Visentin}
 
@@ -722,7 +585,7 @@ Ora si applica l'antitrasformata:
         \end{cases}\]
         \[\frac{3}{5}\frac{1}{s-2} + \frac{2}{5} \frac{1}{s+3} = \left(\frac{3}{5}e^{2t} + \frac{2}{5}e^{-3t}\right)\delta_{-1}(t)\]
         Okay ora proviamo con il metodo dei limiti:
-        \[c_{i} = \lim_{s \rightarrow \lambda_i}\frac{d^{\mu - l - 1}n(s)}{ds^{s-l-1}d(s)}(s-\lambda)\]
+        \[c_{i} = \lim_{s \rightarrow \lambda_i}\frac{d^{\mu - l - 1}n(s)}{ds^{s-l-1}d(s)}(s-\lambda)^\mu\]
         \[A = \lim_{S \rightarrow +2} \frac{d^{1-0-1}}{ds^{1-0-1}} \frac{s+1}{\cancel{(s-2)}(s+3)}\cancel{(s-2)} = \frac{3}{5}\]
         \[B =\lim_{S \rightarrow -3} \frac{d^{1-0-1}}{ds^{1-0-1}} \frac{s+1}{(s-2)\cancel{(s+3)}}\cancel{(s+3)} = \frac{2}{5} \]
         E come si vede, si ottiene il risultato medesimo con diverso metodo.
